--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           git config --local user.name github-actions
           git config --local user.email "actions@github.com"
-          git add data/*
-          git add plots/*
+          git add most-recent/*
+          git add history/*
           git commit -am "GH ACTION Autorun ${date}"
           git push
         env:
