--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git add most-recent/*
           git add history/*
-          git commit -am "GH ACTION Autorun ${date}"
+          git diff-index --quiet HEAD || git commit -am "GH ACTION Autorun ${date}"
           git push
         env:
           REPO_KEY: ${{secrets.GITHUB-TOKEN}}
