--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Weekly update register
 # Controls when the workflow will run
 on:
   schedule:
-    -  cron: '0 16 * * 3'
+    -  cron: '0 14 * * 1-5'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -24,6 +24,11 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-r@v2
+
+      - name: Install packages
+        run: |
+          R -e 'install.packages("rvest")'
+          R -e 'install.packages("stringr")'
 
       - name: Run script
         run: Rscript download-and-write.R
