--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -5,45 +5,27 @@ on:
   
 jobs:
   mailing:
-    uses: dawidd6/action-send-mail@v3
+    
+    steps:
+      - uses: dawidd6/action-send-mail@v3
 
-    with:
-    # Specify connection via URL (replaces server_address, server_port, secure,
-    # username and password)
-    #
-    # Format:
-    #
-    #  * smtp://user:password@server:port
-    #  * smtp+starttls://user:password@server:port
-      connection_url: ${{secrets.MAIL_CONNECTION}}
-    #  Required mail subject:
-      subject: Github Actions job result
-    # Required recipients' addresses:
-      to: martijn.vanbloois@farminform.nl
-    # Required sender full name (address can be skipped):
-      from: Martijn van Bloois # <user@example.com>
-    # Optional plain body:
-      body: Build job of ${{github.repository}} completed successfully!
-    # Optional HTML body read from file:
-      html_body: file://README.html
+        with:
+        connection_url: ${{secrets.MAIL_CONNECTION}}
+        subject: Github Actions job result
+        to: martijn.vanbloois@farminform.nl
+        from: Martijn van Bloois # <user@example.com>
+        body: Build job of ${{github.repository}} completed successfully!
+        html_body: file://README.html
     # Optional carbon copy recipients:
     #cc: 
     # Optional blind carbon copy recipients:
     #bcc: r2d2@example.com,hansolo@example.com
-    # Optional recipient of the email response:
-      reply_to: martijn.vanbloois@farminform.nl
-    # Optional Message ID this message is replying to:
-      in_reply_to: <martijn.vanbloois@farminform.nl>
-    # Optional unsigned/invalid certificates allowance:
-      ignore_cert: true
-    # Optional converting Markdown to HTML (set content_type to text/html too):
-      convert_markdown: true
-    # Optional attachments:
-      attachments: git.diff
-    # Optional priority: 'high', 'normal' (default) or 'low'
-      priority: low
-    # Optional nodemailerlog: true/false
-      nodemailerlog: false
-    # Optional nodemailerdebug: true/false if true lognodem will also be set true
-      nodemailerdebug: false
+        reply_to: martijn.vanbloois@farminform.nl
+        in_reply_to: <martijn.vanbloois@farminform.nl>
+        ignore_cert: true
+        convert_markdown: true
+        attachments: git.diff
+        priority: low
+        nodemailerlog: false
+        nodemailerdebug: false
     
