--- a/.github/workflows/main_save.yml
+++ b/.github/workflows/main_save.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Weekly update register
+name: Save the day
 
 # Controls when the workflow will run
 on:
