Change script name from save-the-day.R to download-and-write.R

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           R -e 'install.packages("rvest")'
 
       - name: Run script
-        run: Rscript save-the-day.R
+        run: Rscript download-and-write.R
 
       - name: Commit files
         run: |
