Add 'dplyr' and 'tidyr' to package installation
Updated package installation to include 'dplyr' and 'tidyr'.

--- a/.github/workflows/main_save.yml
+++ b/.github/workflows/main_save.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install packages
         run: |
-          R -e 'install.packages("rvest")'
+          R -e 'install.packages("rvest", "dplyr", "tidyr")'
 
       - name: Run script
         run: Rscript save-the-day.R
