--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Weekly update register
 # Controls when the workflow will run
 on:
   schedule:
-    -  cron: '0 23 * * 1-5'
+    -  cron: '4 23 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
